--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title>Navbar</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      footer {
-        background-color: #777;
-        padding: 10px;
-        text-align: center;
-        color: white;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav>
@@ -23,17 +24,49 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <section id="à propos">
+    <section id="About">
       <h1>About</h1>
+      <img src="img/cheekpoint.png" />
     </section>
     <section id="travail">
       <h1>Travail</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione,
+        aperiam ipsam neque, nihil minima quos delectus perferendis modi rerum
+        magnam soluta, perspiciatis velit deserunt! Dignissimos ullam fuga omnis
+        aspernatur accusantium.
+      </p>
     </section>
     <section id="CV">
       <h1>Mon CV</h1>
+      <a href="cv/THALJAOUI Nawel.pdf" target="_blank"
+        >cliquez ici pour en savoir mon curriculum vitae</a
+      >
     </section>
     <section id="contact">
       <h1>Contact</h1>
+      <div>
+        <div class="box">
+          <i class="fa-solid fa-envelope fa-2x"></i>
+          <h3>Nom@gmail.com</h3>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-location-dot fa-2x"></i>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3194.805727276949!2d10.175148274697882!3d36.799208067757384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd35b9cfb5221d%3A0x644f4bb3e053f88e!2sGOMYCODE%20Tunis%20Centre%20Ville!5e0!3m2!1sfr!2stn!4v1724575635310!5m2!1sfr!2stn"
+            width="300"
+            height="80"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-phone fa-2x"></i>
+          <h3>+21627656666</h3>
+        </div>
+      </div>
     </section>
     <footer>
       <p>Footer</p>
